...
      }
    },
    "＋" : {
      "extractionState" : "manual",
      "shouldTranslate" : false
    },
    "＋ Chiếu câu hỏi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "＋ Frage stellen"
          }
...
            "state" : "translated",
            "value" : "你"
          }
        }
      }
    },
    "Bạn bè" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Freunde"
          }
...
            "state" : "translated",
            "value" : "更新：2026年7月16日"
          }
        }
      }
    },
    "Câu hỏi của bạn là gì?" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Was ist deine Frage?"
          }
...
            "state" : "translated",
            "value" : "你的问题是什么？"
          }
        }
      }
    },
    "Câu hỏi của tôi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Meine Fragen"
          }
...
            "state" : "translated",
            "value" : "欢迎回来"
          }
        }
      }
    },
    "Chat" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Chats"
          }
...
            "state" : "translated",
            "value" : "使用条款"
          }
        }
      }
    },
    "Đính kèm" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Anhängen"
          }
...
            "state" : "translated",
            "value" : "阅读完整使用条款"
          }
        }
      }
    },
    "Đổi" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ändern"
          }
...
            "state" : "translated",
            "value" : "最近动态"
          }
        }
      }
    },
    "Hỏi đáp" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Q&A"
          }
...
            "state" : "translated",
            "value" : "昨天"
          }
        }
      }
    },
    "Huỷ" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "发消息"
          }
        }
      }
    },
    "Nhắn tin…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nachricht…"
          }
...
            "state" : "translated",
            "value" : "管理员"
          }
        }
      }
    },
    "Quay lại" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
          }
...
            "state" : "translated",
            "value" : "搜索频道、消息…"
          }
        }
      }
    },
    "Tìm người trong cộng đồng…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Menschen in der Community finden…"
          }
...
            "state" : "translated",
            "value" : "语音消息，发送失败"
          }
        }
      }
    },
    "Trả lời" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Antworten"
          }
...
            "state" : "translated",
            "value" : "视频发送中"
          }
        }
      }
    },
    "Viết câu trả lời của bạn…" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schreibe deine Antwort…"
          }
...
            "state" : "translated",
            "value" : "删除账号？"
          }
        }
      }
    },
    "Xoá tìm kiếm" : {
      "extractionState" : "manual",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Suche löschen"
...
